# eusipco-pnp-fmri

./: .gitignore
code/: fmri-run.py  fmri-run_rec_only.py  hp-optuna.py  mwe_anat.py  pyproject.toml  scenario2-pnp.yaml
code/seqpnp/: drunet.py  pyproject.toml  sequentialpnp.py  utils.py
code/snake_seqpnp/: README.md  __init__.py  drunet.py  physic.py  scenario.yaml  sequentialpnp.py  utils.py
paper/: main.tex
